<resources>
    <!-- General -->
    <string name="app_name" translatable="false">PizzaFlizza</string>
    <string name="app_icon" translatable="false">App Icon</string>
    <string name="web_client_id" translatable="false">207376636349-p6k929bqjc43p1eq7bck31dai1q8brsu.apps.googleusercontent.com</string>
    <string name="price_format" translatable="false">"%.2f€"</string>
    <string name="name_user_unknown" translatable="false">Unknown Username</string>
    <string name="name_item_unknown" translatable="false">Unknown Name</string>

    <!-- VersionHints -->
    <string name="hint_title_info" translatable="false">Info</string>
    <string name="hint_title_warning" translatable="false">Warning</string>
    <string name="hint_title_error" translatable="false">Error</string>
    <string name="hint_obsolete" translatable="false">This version of the app has been marked as obsolete and may contain bugs, installing a newer version is recommended</string>
    <string name="hint_disabled" translatable="false">This version of the app has been disabled. It either contains major bugs or is no longer compatible with the server data structure. Please install a newer version.</string>

    <!-- Login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_login_field">E-Mail</string>
    <string name="login_button">Log in</string>
    <string name="what_do_you_want">Wohin möchtest du?</string>
    <string name="order_view">Zu meinen Bestellungen</string>
    <string name="to_penny">Zu Penny</string>
    <string name="create_account">Create Account</string>
    <string name="password_login_field">Password</string>
    <string name="info_verify_email" translatable="false">Please verify your E-Mail to create the account</string>
    <string name="info_wrong_password">Wrong password</string>
    <string name="info_invalid_password" translatable="false">Password has to be at least 6 characters</string>
    <string name="info_no_connection" translatable="false">Please check your internet connection</string>

    <!-- Disclaimer -->
    <string name="disclaimer_header" translatable="false">Hey,</string>
    <string name="disclaimer_arrow" translatable="false">-</string>
    <string name="disclaimer_firebase" translatable="false">Dieses Projekt benutzt leider Google Firebase zum speichern speichern der Daten :/</string>
    <string name="disclaimer_realtime" translatable="false">Alle Informationen zu Bestellungen sind in der Realtime Database gesichert.</string>
    <string name="disclaimer_location" translatable="false">Wir nutzen den Serverstandort europe-west1 in St. Ghislain, Belgien, falls wer vorbeifahren möchte.</string>
    <string name="disclaimer_emmisions" translatable="false">Low-carbon nur 110 gCO2eq/kWh jadijadijada.</string>
    <string name="disclaimer_analythics" translatable="false">Google Analythics wurde deaktiviert, es gibt keine weiteren Auswertungen :)</string>
    <string name="disclaimer_agree" translatable="false">Ich gewähre Google Einblick in meinen ausufernden Pizza-Konsum.</string>
    <string name="disclaimer_button" translatable="false">Alles klar</string>
    <string name="content_realtime_icon" translatable="false">Firebase Realtime Icon</string>

    <!-- Order -->
    <string name="order_sub" translatable="false">-</string>
    <string name="order_add" translatable="false">+</string>
    <string name="order_def" translatable="false">0</string>
    <string name="order_button">Order</string>
    <string name="order_image_description" translatable="false">Product Image</string>
    <string name="sample_order_name" translatable="false">Pizza Margeritha</string>
    <string name="sample_order_price" translatable="false">1,69€</string>
    <string name="sample_total_price" translatable="false">99,99€</string>
    <string name="order_nav_view_description" translatable="false">Navigation view</string>

    <!-- Shop -->
    <string name="sample_item_count" translatable="false">5</string>
    <string name="sample_item_name" translatable="false">Pizza</string>
    <string name="info_no_open_orders" translatable="false">No open orders</string>
    <string name="shop_lock_info" translatable="false">Go shopping</string>

    <!-- Transactions -->
    <string name="transaction_accept" translatable="false">Accept</string>
    <string name="transaction_reject" translatable="false">Reject</string>
    <string name="info_no_transactions" translatable="false">No transactions</string>
    <string name="transaction_clear" translatable="false">Clear</string>
    <string name="transaction_paid" translatable="false">Paid</string>
    <string name="your_order" translatable="false">Your Order</string>
    <string name="sample_name" translatable="false">falkonxx.dinkelacker</string>
    <string name="sample_date" translatable="false">01.01.1970</string>
    <string name="sample_order" translatable="false">- 1x Backstein</string>

    <!-- Menu -->
    <string name="menu_order">Order</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_transactions">Transactions</string>

    <!-- Tour -->
    <string name="tour_accept" translatable="false">Got it</string>
    <string name="sample_tour_content" translatable="false">Sample Tour Content</string>

    <!-- Preferences -->
    <string name="quiz_prompt_hearty" translatable="false">Mal so rein hypothetisch.\nWas schmeckt besser?</string>
    <string name="quiz_prompt_sweet" translatable="false">Und bei Süßis?</string>

</resources>